Fix margins forcing buttons on program to break alignment

--- a/app/assets/stylesheets/_gcms.scss
+++ b/app/assets/stylesheets/_gcms.scss
@@ -1257,7 +1257,7 @@ margin-top:5px;
 
 /* This widget isn't full of content slots, so lets add some padding to make the input boxes look less cramped */
 .information {
-  padding:10px;
+  /* padding:10px; */
 }
 
 /* Tab bar buttons */
